--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -29,19 +29,19 @@
                         <div class="row">
                             <div class="col-12 col-lg-12">
                                 <label for="nome_receita"><b>Nome completo</b></label>
-                                <input type="text" class="form-control" name="nome" placeholder="Ex.:Guilherme Lima" required>
+                                <input type="text" class="form-control" name="nome" placeholder="Ex.:Guilherme Lima">
                             </div>
                             <div class="col-12 col-lg-12">
                                 <label for="email"><b>Email</b></label>
-                                <input type="email" class="form-control" name="email" placeholder="Ex.: guilherme@receitas.com" required>
+                                <input type="email" class="form-control" name="email" placeholder="Ex.: guilherme@receitas.com">
                             </div>
                             <div class="col-12 col-lg-6">
                                 <label for="password"><b>Senha</b></label>
-                                <input type="password" class="form-control" name="password" placeholder="Digite sua senha" required>
+                                <input type="password" class="form-control" name="password" placeholder="Digite sua senha">
                             </div>
                             <div class="col-12 col-lg-6">
                                 <label for="password2"><b>Confirmação de senha</b></label>
-                                <input type="password" class="form-control" name="password2" placeholder="Digite sua senha mais uma vez" required>
+                                <input type="password" class="form-control" name="password2" placeholder="Digite sua senha mais uma vez">
                             </div>
                             <div class="col-12 text-center">
                                 <button class="btn btn-success" type="submit">Criar sua conta</button>
