--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -57,6 +57,13 @@
                             <div class="classynav">
                                 <ul>
                                     <li><a href="{% url 'index' %}">Home</a></li>
+                                    {% if user.is_authenticated %}
+                                    <li><a href="{% url 'dashboard' %}">Minhas receitas</a></li>
+                                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                                    {% else %}
+                                    <li><a href="{% url 'cadastro' %}">Cadastro</a></li>
+                                    <li><a href="{% url 'login' %}">Login</a></li>
+                                    {% endif %}
                                 </ul>
 
                                 <!-- Formulario de busca -->
