--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -56,8 +56,8 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li><a href="{% url 'index' %}">Home</a></li>
                                     {% if user.is_authenticated %}
+                                    <li><a href="{% url 'index' %}">Página principal</a></li>
                                     <li><a href="{% url 'dashboard' %}">Minhas receitas</a></li>
                                     <li><a href="{% url 'cria_receita' %}">Criar receita</a></li>
                                     <li><a href="{% url 'logout' %}">Logout</a></li>
