--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -42,7 +42,7 @@
                     <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}"> Home</a>
                     <a href="{% url 'usuarios:login' %}"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Login</a>
                     <a href="{% url 'usuarios:cadastro' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Cadastrar</a>
-                    <a href="#"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Logout</a>
+                    <a href="{% url 'usuarios:logout' %}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}">Logout</a>
                 </nav>
             </section>
             <section class="galeria" style="margin-left: 5em">
