--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -55,6 +55,11 @@
                                 <label for="{{ field.id_for_label}}" style="color:#D9D9D9; margin-bottom: 5px;"><b>{{ field.label }}</b></label>
                                 {{ field }}
                             </div>
+                            {% for error in field.errors %}
+                                <div class="alert alert-danger">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
                         {% endfor %}
                         <div class="col-12 text-center">
                             <button class="btn btn-success col-12" style="padding: top 5px;" type="submit">Cadastrar</button>
